don't copy params from propertyMap